--- a/assets/scss/builder/_tooltip.scss
+++ b/assets/scss/builder/_tooltip.scss
@@ -39,18 +39,14 @@
 	}
 	
 	.boldgrid-tooltip-arrow {
-	    top: 0;
-	    left: 50%;
-	    margin-left: -5px;
-	    border-bottom-style: solid;
-	    border: 5px dashed #000;
-	    border-top: none;
-	    border-left-color: transparent;
-	    border-right-color: transparent;
-	    position: absolute;
-	    width: 0;
-	    height: 0;
-	    line-height: 0;
+        position: absolute;
+        left: 50%;
+        margin-left: -5px;
+		width: 0; 
+		height: 0; 
+		border-left: 5px solid transparent;
+		border-right: 5px solid transparent;
+		border-bottom: 5px solid black;
 	}
 	
 	.editor-panel .boldgrid-tooltip-wrap {
